--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-kazoo==2.9.0
-tox==4.4.4
-requests>=2.31.0
-mmh3>=2.3.1
+kazoo==2.10.0
+tox==4.24.1
+requests>=2.32.3
+mmh3>=2.5.1
+setuptools==75.8.0
